clusters/homelab/apps/lldap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lldap
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
    # Enable Istio Ambient mode for this namespace
    istio.io/dataplane-mode: ambient
