clusters/homelab/apps/lldap/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
  namespace: lldap
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: lldap-https
  hostnames:
  - "lldapx.daddyshome.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: lldap
      port: 17170
